# solutionsprojecteuler

./: CMakeLists.txt  ProjectEuler.cbp  README.md  main.cpp
Computing/: Combination.cpp  Combination.hpp  DigitsOperations.cpp  DigitsOperations.hpp  IntegerOperations.cpp  IntegerOperations.hpp  Matrix.hpp  StringOperations.cpp  StringOperations.hpp
Computing/FatNumber/: FatNumber.hpp  Palindrome.hpp  Power.hpp
IO/: FillMatrix.hpp
PokerGame/: Card.cpp  Card.hpp  Hand.cpp  Hand.hpp  HandSet.cpp  HandSet.hpp  PokerConfig.hpp
PokerGame/Parser/: HandParser.cpp  HandParser.hpp
Sudoku/: IndexAndValues.cpp  IndexAndValues.hpp  SudokuGrid.cpp  SudokuGrid.hpp
problems/: CMakeLists.txt  Problem_81.cpp  Problem_81.hpp  problem_10.cpp  problem_10.hpp  problem_100.cpp  problem_11.cpp  problem_11.hpp  problem_12.cpp  problem_12.hpp  problem_13.cpp  problem_13.hpp  problem_14.cpp  problem_14.hpp  problem_15.cpp  problem_15.hpp  problem_16.cpp  problem_16.hpp  problem_17.cpp  problem_17.hpp  problem_18.cpp  problem_18.hpp  problem_19.cpp  problem_19.hpp  problem_2.cpp  problem_2.hpp  problem_20.cpp  problem_20.hpp  problem_21.cpp  problem_21.hpp  problem_22.cpp  problem_22.hpp  problem_23.cpp  problem_23.hpp  problem_24.cpp  problem_24.hpp  problem_25.cpp  problem_25.hpp  problem_26.cpp  problem_26.hpp  (+137 more)
